feat(ui): upgrade to ng 18
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -25,32 +25,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.3.12",
-    "@angular/cdk": "16.2.12",
-    "@angular/common": "17.3.12",
-    "@angular/compiler": "17.3.12",
-    "@angular/core": "17.3.12",
-    "@angular/forms": "17.3.12",
-    "@angular/platform-browser": "17.3.12",
-    "@angular/platform-browser-dynamic": "17.3.12",
-    "@angular/router": "17.3.12",
-    "@babel/runtime": "7.23.2",
-    "@fontsource/lato": "5.0.18",
+    "@angular/animations": "18.2.13",
+    "@angular/cdk": "18.2.14",
+    "@angular/common": "18.2.13",
+    "@angular/compiler": "18.2.13",
+    "@angular/core": "18.2.13",
+    "@angular/forms": "18.2.13",
+    "@angular/platform-browser": "18.2.13",
+    "@angular/platform-browser-dynamic": "18.2.13",
+    "@angular/router": "18.2.13",
+    "@babel/runtime": "7.23.9",
+    "@fontsource/lato": "5.0.23",
     "@icholy/duration": "5.0.0",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
-    "@ngxs/devtools-plugin": "3.8.2",
-    "@ngxs/logger-plugin": "3.8.2",
-    "@ngxs/storage-plugin": "3.8.2",
-    "@ngxs/store": "3.8.2",
+    "@ngxs/devtools-plugin": "18.1.6",
+    "@ngxs/logger-plugin": "18.1.6",
+    "@ngxs/storage-plugin": "18.1.6",
+    "@ngxs/store": "18.1.6",
     "@swimlane/ngx-charts": "20.5.0",
     "@types/dagre-d3": "0.6.2",
-    "@types/js-yaml": "3.12.2",
-    "@types/zxcvbn": "4.4.0",
+    "@types/js-yaml": "3.12.10",
+    "@types/zxcvbn": "4.4.5",
     "angular2-prettyjson": "3.0.1",
     "animate.css": "3.7.2",
-    "ansi_up": "5.0.0",
-    "codemirror": "5.58.2",
+    "ansi_up": "5.0.1",
+    "codemirror": "5.58.3",
     "core-js": "3.33.3",
     "d3": "7.8.5",
     "d3-zoom": "3.0.0",
@@ -60,25 +60,25 @@
     "enhanced-resolve": "4.1.1",
     "fast-json-patch": "3.1.1",
     "font-awesome": "4.7.0",
-    "immutable": "4.0.0-rc.12",
-    "jquery": "3.6.1",
+    "immutable": "4.0.0",
+    "jquery": "3.6.4",
     "js-beautify": "1.8.9",
     "js-yaml": "3.13.1",
-    "jsonschema": "1.2.5",
+    "jsonschema": "1.2.11",
     "jsrsasign": "11.0.0",
     "lodash-es": "4.17.21",
     "modernizr": "3.12.0",
     "moment": "2.29.4",
     "monaco-editor": "0.52.2",
     "ng-event-source": "1.0.14",
-    "ng-zorro-antd": "17.4.1",
+    "ng-zorro-antd": "18.2.1",
     "ng2-completer": "2.0.8",
     "ng2-dragula": "5.1.0",
     "ngx-clipboard": "16.0.0",
-    "ngx-infinite-scroll": "17.0.1",
-    "ngx-markdown": "17.2.1",
+    "ngx-infinite-scroll": "18.0.0",
+    "ngx-markdown": "18.1.0",
     "ngx-moment": "6.0.2",
-    "postcss": "8.4.31",
+    "postcss": "8.4.49",
     "prismjs": "1.28.0",
     "raven-js": "3.27.2",
     "rxjs": "7.8.1",
@@ -87,59 +87,59 @@
     "spinkit": "2.0.1",
     "string-format-obj": "1.1.1",
     "ts-helpers": "1.1.2",
-    "tslib": "2.3.0",
-    "url": "0.11.0",
+    "tslib": "2.3.1",
+    "url": "0.11.4",
     "zone.js": "0.14.10",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "17.0.2",
-    "@angular-devkit/build-angular": "17.3.11",
-    "@angular-eslint/builder": "17.5.1",
-    "@angular-eslint/eslint-plugin": "17.5.1",
-    "@angular-eslint/eslint-plugin-template": "17.5.1",
-    "@angular-eslint/schematics": "17.5.1",
-    "@angular-eslint/template-parser": "17.5.1",
-    "@angular/cli": "17.3.11",
-    "@angular/compiler-cli": "17.3.12",
-    "@commitlint/cli": "19.2.1",
+    "@angular-builders/custom-webpack": "18.0.0",
+    "@angular-devkit/build-angular": "18.2.13",
+    "@angular-eslint/builder": "18.4.3",
+    "@angular-eslint/eslint-plugin": "18.4.3",
+    "@angular-eslint/eslint-plugin-template": "18.4.3",
+    "@angular-eslint/schematics": "18.4.3",
+    "@angular-eslint/template-parser": "18.4.3",
+    "@angular/cli": "18.2.13",
+    "@angular/compiler-cli": "18.2.13",
+    "@commitlint/cli": "19.2.2",
     "@commitlint/config-conventional": "13.2.0",
-    "@compodoc/compodoc": "1.1.25",
+    "@compodoc/compodoc": "1.1.26",
     "@ctrl/tinycolor": "4.1.0",
     "@sentry/cli": "1.37.4",
-    "@types/codemirror": "0.0.81",
+    "@types/codemirror": "0.0.109",
     "@types/d3": "5.9.2",
     "@types/dagre": "0.7.40",
-    "@types/jasmine": "3.6.0",
-    "@types/jasminewd2": "2.0.8",
-    "@types/lodash-es": "4.17.3",
-    "@types/node": "18.18.10",
+    "@types/jasmine": "3.6.11",
+    "@types/jasminewd2": "2.0.13",
+    "@types/lodash-es": "4.17.12",
+    "@types/node": "18.18.14",
     "@types/sanitize-html": "2.9.5",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "@typescript-eslint/typescript-estree": "5.17.0",
-    "codelyzer": "6.0.0",
-    "copy-webpack-plugin": "9.0.0",
+    "codelyzer": "6.0.2",
+    "copy-webpack-plugin": "9.0.1",
     "eslint": "8.57.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsdoc": "46.9.0",
+    "eslint-plugin-jsdoc": "46.9.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "husky": "3.0.5",
+    "husky": "3.0.9",
     "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "5.0.0",
-    "karma": "6.3.17",
-    "karma-chrome-launcher": "3.1.0",
+    "jasmine-spec-reporter": "5.0.2",
+    "karma": "6.3.20",
+    "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "2.0.3",
-    "karma-jasmine": "4.0.0",
-    "karma-jasmine-html-reporter": "1.5.0",
+    "karma-jasmine": "4.0.2",
+    "karma-jasmine-html-reporter": "1.5.4",
     "karma-junit-reporter": "1.2.0",
-    "lint-staged": "12.0.2",
-    "ng-packagr": "17.3.0",
-    "style-loader": "3.3.3",
+    "lint-staged": "12.0.3",
+    "ng-packagr": "18.2.1",
+    "style-loader": "3.3.4",
     "ts-node": "8.3.0",
     "typescript": "5.4.5",
-    "url": "0.11.0",
-    "webdriver-manager": "12.1.7",
+    "url": "0.11.4",
+    "webdriver-manager": "12.1.9",
     "webpack-bundle-analyzer": "4.6.1",
     "wrench-sui": "0.0.3"
   },
@@ -147,6 +147,14 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "overrides": {
+    "ng2-dragula": {
+      "@types/dragula": "3.7.5",
+      "@angular/animations": "18.2.13",
+      "@angular/common": "18.2.13",
+      "@angular/core": "18.2.13"
     }
   }
 }
