--- a/tests/08_v2_workflow_artifactory_plugins_helm_release.yml
+++ b/tests/08_v2_workflow_artifactory_plugins_helm_release.yml
@@ -161,7 +161,7 @@ testcases:
               - uses: actions/checkout
               - uses: actions/helmPush  
           Release:
-            needs: [Python-Job]
+            needs: [Helm-Job]
             runs-on: "{{.worker_model}}"
             steps:
               - uses: actions/artifactoryRelease
