--- a/tests/08_v2_distant_workflow.yml
+++ b/tests/08_v2_distant_workflow.yml
@@ -153,7 +153,7 @@ testcases:
 - name: PushCodeButNotSignedCommit
   steps:
   - name: push new commit without signature
-    script: cd /tmp/repos/{{.git_repo_src}} && touch foo.bar && git add foo.bar && git commit . -m "add foo.bar file" && git push
+    script: cd /tmp/repos/{{.git_repo_src}} && touch foo.bar && git add foo.bar && git commit . -m "add foo.bar file" --no-gpg-sign && git push
   - name: retrieve commit of workflow
     script: cd /tmp/repos/{{.git_repo_code}} && git rev-parse HEAD
     vars:
