fix(api): use the right ref

--- a/tests/08_v2_workflow_job_template_distant.yml
+++ b/tests/08_v2_workflow_job_template_distant.yml
@@ -193,6 +193,7 @@ testcases:
     git_email: "{{.Prepare-test.emailaddress}}"
     git_password: "{{.git.password}}"
     gpg_key_id: "{{.gpg.key_id}}"
+    branch: my/branch
     files:
       workflows/myworkflow.yaml:
         name: {{.cds_workflow}}
