--- a/tests/08_v2_workflow_job_concurrency_cancel.yml
+++ b/tests/08_v2_workflow_job_concurrency_cancel.yml
@@ -2,7 +2,9 @@ name: Workflow Job Concurrency Cancel
 vars:
   cds_project: "ITV2JOBCONCURRENCYCANCEL"
   git_repo: "it_v2_job_woncurrency_cancel"
-  cds_workflow: "WorkflowJobConcurrencyCancel"
+  cds_workflow: "WorkflowJobConcurrency"
+  cds_workflow_cancelled: "WorkflowJobConcurrencyCancel"
+  cds_workflow_job_cancelled: "WorkflowJobConcurrencyJobCancel"
 testcases:
 - name: Prepare test
   steps:
@@ -42,6 +44,20 @@ testcases:
       git_password: "{{.git.password}}"
       git_repo: "{{.git_repo}}"
 
+- name: Create concurrency on project
+  steps:
+    - name: Create concurrency
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project concurrency add {{.cds_project}} concu \"This is a concurrency rule\" --pool 2 --cancel-in-progress"
+    - name: List concurrency rule
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project concurrency list {{.cds_project}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 1
+        - result.systemoutjson.systemoutjson0.name ShouldEqual "concu"
+    - name: Get concurrency rule
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project concurrency show {{.cds_project}} concu --format json"
+      assertions:
+        - result.systemoutjson.name ShouldEqual "concu"
+
 - name: Push workflow file
   steps:
     - type: v2_push_cds_files_on_repo
@@ -58,22 +74,33 @@ testcases:
           type: docker
           spec:
             image: buildpack-deps:buster
-        workflows/servicelog.yaml:
-          name: {{.cds_workflow}}
-          on: [push]
-          concurrencies:
-          - name: ${{git.ref_name}}
-            cancel-in-progress: true
-            pool: 1
+        workflows/workflow1.yaml:
+          name: {{.cds_workflow_cancelled}}
+          concurrency: concu
           jobs:
             job1:
               runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
-              concurrency: ${{git.ref_name}}
+              steps:
+                - run: sleep 120
+        workflows/workflow2.yaml:
+          name: {{.cds_workflow_job_cancelled}}
+          jobs:
+            job1:
+              concurrency: concu
+              runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
+              steps:
+                - run: sleep 120
+        workflows/workflow3.yaml:
+          name: {{.cds_workflow}}
+          jobs:
+            job1:
+              runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
+              concurrency: concu
               steps:
                 - run: sleep 20
             job2:   
               runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
-              concurrency: ${{git.ref_name}}
+              concurrency: concu
               steps:
                 - run: sleep 20
     - name: Check CDS project analyses status
@@ -85,71 +112,85 @@ testcases:
       retry: 100
       delay: 1
 
+    - name: Run the first workflow
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow_cancelled}}"
+
     - name: Check that the CDS workflow has at least one execution and is Building
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow_cancelled}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 1
+        - result.systemoutjson.systemoutjson0.status ShouldEqual "Building"
+      retry: 20
+      delay: 1
+    
+    - name: Run the second workflow
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow_job_cancelled}}"
+    
+    - name: Check that the 2nd workflow has at least one execution and is Building
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow_job_cancelled}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 1
+        - result.systemoutjson.systemoutjson0.status ShouldEqual "Building"
+      retry: 20
+      delay: 1
+      vars:
+        workflowRunID2:
+          from: result.systemoutjson.systemoutjson0.id
+    
+    - name: Wait for job in workflow 2
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID2}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 1
+        - result.systemoutjson.systemoutjson0.status ShouldEqual 'Building'
+      retry: 30
+      delay: 1
+
+    - name: Run the 3rd workflow
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}}"
+    
+    - name: Check that the 3nd workflow has at least one execution and is Building
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
         - result.systemoutjson ShouldHaveLength 1
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Building"
-      retry: 100
-      delay: 1
       vars:
-        workflowRunID:
+        workflowRunID3:
           from: result.systemoutjson.systemoutjson0.id
     
-    - name: Retrieve job status and check if one is blocked
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID}} --format json"
+    - name: Check that jobs are building
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID3}} --format json"
       assertions:
         - result.systemoutjson ShouldHaveLength 2
-        - result.systemoutjson.systemoutjson0.status ShouldNotEqual result.systemoutjson.systemoutjson1.status
-        - or:
-          - result.systemoutjson.systemoutjson0.status ShouldEqual "Building"
-          - result.systemoutjson.systemoutjson0.status ShouldEqual "Cancelled"
-        - or:
-          - result.systemoutjson.systemoutjson1.status ShouldEqual "Building"
-          - result.systemoutjson.systemoutjson1.status ShouldEqual "Cancelled"
-      retry: 100
-      delay: 1
-    
-    - name: Run Manually a second run
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}}"
-
-    - name: Check that the CDS workflow has 2 executions and the last one is building, the first one is cancelled
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
-      assertions:
-        - result.systemoutjson ShouldHaveLength 2
-        - result.systemoutjson.systemoutjson1.status ShouldEqual "Cancelled"
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Building"
-      vars:
-        workflowRunID2:
-          from: result.systemoutjson.systemoutjson0.id
-      retry: 50
-      delay: 1    
-
-    - name: Check job in run 2, one must be cancelled
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID2}} --format json"
-      assertions:
-        - result.systemoutjson ShouldHaveLength 2
-        - result.systemoutjson.systemoutjson0.status ShouldNotEqual result.systemoutjson.systemoutjson1.status
-        - or:
-          - result.systemoutjson.systemoutjson0.status ShouldEqual "Building"
-          - result.systemoutjson.systemoutjson0.status ShouldEqual "Cancelled"
-        - or:
-          - result.systemoutjson.systemoutjson1.status ShouldEqual "Building"
-          - result.systemoutjson.systemoutjson1.status ShouldEqual "Cancelled"
-      retry: 100
+        - result.systemoutjson.systemoutjson1.status ShouldEqual "Building"
+      retry: 20
       delay: 1
 
-    - name: Check that job in run1 are all cancelled
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID}} --format json"
+    - name: Check that 1st workflow is cancelled
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow_cancelled}} --format json"
       assertions:
-        - result.systemoutjson ShouldHaveLength 2
+        - result.systemoutjson ShouldHaveLength 1
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Cancelled"
-        - result.systemoutjson.systemoutjson1.status ShouldEqual "Cancelled"
-      
-    - name: Check that the CDS workflow is Success
+      retry: 20
+      delay: 1
+
+    - name: Check that job in workflow 2 is cancelled
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow_job_cancelled}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 1
+        - result.systemoutjson.systemoutjson0.status ShouldEqual "Cancelled"
+      retry: 20
+      delay: 1
+
+    - name: Wait workflow 3 end
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
-        - result.systemoutjson ShouldHaveLength 2
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Cancelled"
-      retry: 200
+        - result.systemoutjson ShouldHaveLength 1
+        - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+      retry: 100
       delay: 1
+      
+      
+
+   
+    
